// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet (shell) snapshots dark palette + peer available 1`] = `
<View
  data-bg="#1C1C1E"
  data-pan-close={true}
  data-snap-points="["50%","90%"]"
  testID="bottom-sheet-body"
>
  <Text>
    Dark body
  </Text>
</View>
`;

exports[`BottomSheet (shell) snapshots default light + peer available 1`] = `
<View
  data-bg="#FFFFFF"
  data-pan-close={true}
  data-snap-points="["50%","90%"]"
  testID="bottom-sheet-body"
>
  <Text>
    Sheet body
  </Text>
</View>
`;

exports[`BottomSheet (shell) snapshots missing peer dep fallback 1`] = `
<View
  testID="bottom-sheet"
>
  <Text
    color="#DC2626"
    testID="bottom-sheet-missing-peer"
  >
    Install \`@expo/ui\` to enable BottomSheet.
  </Text>
</View>
`;
